# schoenflies_python

./: .gitignore  CHANGELOG.md  README.md  example_usage.py  pyproject.toml
PG_analyser/schoenflies-py/: pyproject.toml
PG_analyser/schoenflies-py/examples/: example_usage.py
PG_analyser/schoenflies-py/schoenflies/: __init__.py  utils.py
PG_analyser/schoenflies-py/tests/: test_point_group.py
PG_analyser/schoenflies-py/visualiser/: README.md
Reference/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  resources.qrc  resources.rc  windows-toolchain.cmake
Reference/assets/shaders/: canvas.fs  phong.fs  silhouette.fs  stereo.vs  stereo_anaglyph_red_cyan.fs  stereo_interlaced_checkerboard_lr.fs  stereo_interlaced_checkerboard_rl.fs  stereo_interlaced_columns_lr.fs  stereo_interlaced_columns_rl.fs  stereo_interlaced_rows_lr.fs  stereo_interlaced_rows_rl.fs  text.fs  text.vs
Reference/assets/structures/: 1,2-difluorocubane.xyz  1,4-difluorocubane.xyz  18-annulene.xyz  18-crown-6.xyz  adamantane.xyz  ammonia.xyz  benzene.xyz  borane.xyz  buckminsterfullerene.xyz  coronene.xyz  cubane.xyz  cubylcubane.xyz  cyclohexane-boat.xyz  cyclohexane-chair.xyz  cyclopentadienyl.xyz  dodecaborate.xyz  dodecaethyleneoctamine.xyz  dodecahedrane.xyz  ethylene.xyz  ferrocene-eclipsed.xyz  ferrocene-staggered.xyz  iodine-heptafluoride.xyz  iron-phthalocyanine.xyz  iron-porphyrin.xyz  library.json  methane.xyz  neopentane.xyz  octamethylsilsesquioxane.xyz  oxalic-acid.xyz  pentaprismane.xyz  sulfur-hexafluoride.xyz  tetrairidium-dodecacarbonyl.xyz  tetraphenylmethane.xyz  triphenylene.xyz  uranocene.xyz  water.xyz  xenon-tetrafluoride.xyz
Reference/src/: basis_set.cpp  basis_set.h  cmd_handler.cpp  cmd_handler.h  file.cpp  file.h  main.cpp  main.h  program.h  structure.cpp  structure.h  structure_renderer.cpp  structure_renderer.h
Reference/src/gui/: central_widget.cpp  central_widget.h  character_table_dialog.cpp  character_table_dialog.h  character_table_item_delegate.cpp  character_table_item_delegate.h  gl_widget.cpp  gl_widget.h  gui_mode.h  main_window.h  (+30 more)
Reference/test/: CMakeLists.txt  file.cpp  improper_rotation.cpp  inversion.cpp  irrep_label.cpp  library.cpp  library_package.cpp  main.cpp  operation_label.cpp  orbital_label.cpp  point_groups.cpp  practice_flowchart.cpp  practice_irreps.cpp  practice_projection.cpp  proper_rotation.cpp  reflection.cpp  structure.cpp  symmetry.cpp  utils.cpp  utils.h
(+143 files in other folders)
